fix the spacing on projects container to make it even

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -9,7 +9,7 @@
   align-items: center;
   border-radius: 100px;
   border: 2px solid #007BFF;
-  margin: 50px;
+  margin: 25px;
 }
 
 .technologies {
